test/classes/delete-free/shared/shared-from-owned.good
shared-from-owned.chpl:4: In function 'main':
shared-from-owned.chpl:7: error: Illegal use of dead value
shared-from-owned.chpl:6: note: 'oo' is dead due to ownership transfer here
shared-from-owned.chpl:7: error: mention of non-nilable variable after ownership is transferred out of it
shared-from-owned.chpl:6: note: ownership transfer occurred here
